Changed design, fixed broken details and added scroll

--- a/src/styles/detailedPokemon.module.css
+++ b/src/styles/detailedPokemon.module.css
@@ -2,7 +2,7 @@
   height: 82.5vh;
   width: 44vw;
   margin-top: 1.2%;
-  margin-left: 1.2%;
+  margin-left: 5.6vw;
 
   display: flex;
   justify-content: space-between;
