--- a/src/styles/pokemons.module.css
+++ b/src/styles/pokemons.module.css
@@ -3,6 +3,7 @@
   width: 40vw;
   background-color: rgb(248, 248, 248);
   margin-top: 1.2%;
+  margin-right: 5.6vw;
   display: flex;
   justify-content: left;
 
@@ -21,8 +22,55 @@
 }
 
 .list::-webkit-scrollbar {
-  display: none;
+  width: 4vw;
 }
+
+.list::-webkit-scrollbar-track {
+  background: transparent;
+  -webkit-box-shadow: inset 0 0 100px black;
+  border-left: 30px solid transparent;
+  border-right: 30px solid transparent;
+}
+
+.list::-webkit-scrollbar-thumb {
+  background: linear-gradient(
+    rgb(88, 112, 248),
+    rgb(56, 80, 200),
+    rgb(32, 48, 152)
+  );
+  height: 14vh;
+  border: 7.6px;
+  border-style: solid;
+  border-color: black;
+  border-radius: 10px;
+  box-shadow: inset 0 0 0 0.2em white;
+}
+
+/* .list::-webkit-scrollbar-button:single-button {
+  background-color: #bbbbbb;
+  display: block;
+  border-style: solid;
+  height: 13px;
+  width: 16px;
+}
+
+::-webkit-scrollbar-button:single-button:vertical:decrement {
+  border-width: 0 8px 8px 8px;
+  border-color: transparent transparent #555555 transparent;
+}
+
+::-webkit-scrollbar-button:single-button:vertical:decrement:hover {
+  border-color: transparent transparent #777777 transparent;
+}
+
+::-webkit-scrollbar-button:single-button:vertical:increment {
+  border-width: 8px 8px 0 8px;
+  border-color: #555555 transparent transparent transparent;
+}
+
+::-webkit-scrollbar-button:vertical:single-button:increment:hover {
+  border-color: #777777 transparent transparent transparent;
+} */
 
 ul {
   width: 100%;
@@ -40,9 +88,9 @@ li {
   border: 7.6px;
   border-style: solid;
   border-color: transparent;
-  border-radius: 10px;
+  border-radius: 30px;
 
-  padding: 5px;
+  padding: 4px 0 4px 4px;
 }
 
 li:hover {
