--- a/src/styles/detailedPokemon.module.css
+++ b/src/styles/detailedPokemon.module.css
@@ -26,7 +26,7 @@
   align-items: center;
   align-content: stretch;
 
-  font-size: 70px;
+  font-size: 7.5vh;
   color: rgb(88, 88, 80);
   text-shadow: 2px 2px rgb(168, 184, 184);
 }
@@ -53,6 +53,43 @@
 .pokeImg {
   height: 56vh;
   width: 30vw;
+  z-index: 2;
+}
+
+.pokeImg:hover {
+  filter: grayscale();
+  cursor: pointer;
+}
+
+.imgWrapper {
+  position: relative;
+}
+
+.imgDescr {
+  position: absolute;
+  top: 3em;
+  left: 2em;
+  visibility: hidden;
+  margin: 0;
+
+  font-size: 8vh;
+  -webkit-text-stroke: 0.5px black;
+  color: rgb(232, 48, 48);
+  z-index: 3;
+}
+
+.imgWrapper:hover {
+  cursor: pointer;
+}
+
+.imgWrapper:hover .imgDescr {
+  visibility: visible;
+  opacity: 1;
+}
+
+.imgWrapper:hover .pokeImg {
+  filter: grayscale();
+  cursor: pointer;
 }
 
 .details {
@@ -71,7 +108,7 @@
   align-items: center;
   align-content: stretch;
 
-  font-size: 40px;
+  font-size: 4vh;
   color: rgb(88, 88, 80);
   text-shadow: 2px 2px rgb(168, 184, 184);
   text-align: center;
@@ -89,4 +126,73 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: none;
+  z-index: 4;
+}
+
+.popup {
+  height: 75vh;
+  width: 40vw;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgb(248, 248, 248);
+
+  box-shadow: inset 3em 0em rgb(232, 48, 48), inset -3em 0em rgb(232, 48, 48),
+    inset 3.5em 0 rgb(248, 152, 160), inset -3.5em 0em rgb(248, 152, 160);
+  border: 7.6px;
+  border-style: solid;
+  border-color: black;
+  border-radius: 10px;
+
+  display: none;
+  z-index: 5;
+}
+
+.popupContent {
+  text-align: left;
+  margin: 5% 10%;
+  font-size: 4vh;
+  color: rgb(88, 88, 80);
+  text-shadow: 2px 2px rgb(168, 184, 184);
+  text-transform: capitalize;
+}
+
+.popupContent h1 {
+  margin: 0;
+  text-align: center;
+  font-size: 7.5vh;
+  font-weight: normal;
+}
+
+.popupContent span {
+  font-weight: bold;
+  color: rgb(50, 50, 50);
+  text-shadow: 2px 2px (88, 88, 80);
+}
+
+.removeBtn {
+  background-color: rgb(232, 48, 48);
+  color: white;
+  border-style: solid;
+  border-color: black;
+  border-radius: 10px;
+  padding: 10px 20px;
+  cursor: pointer;
+
+  margin: 10% 0 0;
+  position: absolute;
+  left: 50%;
+  bottom: 5%;
+  transform: translate(-50%, -50%);
 }
