--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -15,7 +15,7 @@
   justify-content: center;
   align-items: center;
 
-  font-size: 80px;
+  font-size: 10vh;
   color: white;
   text-shadow: 4px 4px black;
 }
