--- a/src/styles/pokemons.module.css
+++ b/src/styles/pokemons.module.css
@@ -28,8 +28,8 @@
 .list::-webkit-scrollbar-track {
   background: transparent;
   -webkit-box-shadow: inset 0 0 100px black;
-  border-left: 30px solid transparent;
-  border-right: 30px solid transparent;
+  border-left: 32px solid transparent;
+  border-right: 32px solid transparent;
 }
 
 .list::-webkit-scrollbar-thumb {
@@ -46,31 +46,30 @@
   box-shadow: inset 0 0 0 0.2em white;
 }
 
-/* .list::-webkit-scrollbar-button:single-button {
-  background-color: #bbbbbb;
+.list::-webkit-scrollbar-button:single-button {
+  background-color: transparent;
   display: block;
   border-style: solid;
-  height: 13px;
-  width: 16px;
+  height: 3em;
 }
 
-::-webkit-scrollbar-button:single-button:vertical:decrement {
-  border-width: 0 8px 8px 8px;
-  border-color: transparent transparent #555555 transparent;
+.list::-webkit-scrollbar-button:single-button:vertical:decrement {
+  border-width: 0 2.3em 3.5em 2.3em;
+  border-color: transparent transparent rgb(88, 112, 248) transparent;
 }
 
-::-webkit-scrollbar-button:single-button:vertical:decrement:hover {
-  border-color: transparent transparent #777777 transparent;
+.list::-webkit-scrollbar-button:single-button:vertical:decrement:hover {
+  border-color: transparent transparent rgb(56, 80, 200) transparent;
 }
 
-::-webkit-scrollbar-button:single-button:vertical:increment {
-  border-width: 8px 8px 0 8px;
-  border-color: #555555 transparent transparent transparent;
+.list::-webkit-scrollbar-button:single-button:vertical:increment {
+  border-width: 3.5em 2.3em 0 2.3em;
+  border-color: rgb(32, 48, 152) transparent transparent transparent;
 }
 
-::-webkit-scrollbar-button:vertical:single-button:increment:hover {
-  border-color: #777777 transparent transparent transparent;
-} */
+.list::-webkit-scrollbar-button:vertical:single-button:increment:hover {
+  border-color: rgb(56, 80, 200) transparent transparent transparent;
+}
 
 ul {
   width: 100%;
@@ -81,7 +80,7 @@ ul {
 
 li {
   width: 100%;
-  font-size: 70px;
+  font-size: 7.5vh;
   color: rgb(88, 88, 80);
   text-shadow: 2px 2px rgb(168, 184, 184);
 
